Update value_str test

--- a/test/test_value_str.tavern.yaml
+++ b/test/test_value_str.tavern.yaml
@@ -86,9 +86,9 @@ stages:
 
   - name: Set value_str
     mqtt_publish:
-      topic: hasp/{plate}/command
-      payload: "p[1].b[1].value_str={str1}{str2}"
-    delay_after: 0
+      topic: "hasp/{plate}/command/p[1].b[1].value_str"
+      payload: "{str1}{str2}"
+    delay_after: 0.2
   - name: Get value_str
     mqtt_publish:
       topic: hasp/{plate}/command
