--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -8,7 +8,7 @@
 ; !! This board already defines TFT_CS, TFT_DC and TFT_RST !!
 
 [env:lolind32pro-lolintft24]
-platform = espressif32 @ ^2.0.0
+platform = espressif32
 board = lolin_d32_pro
 ;upload_port = COM6      ; To change the port, use platform_override.ini
 ;monitor_port = COM6     ; To change the port, use platform_override.ini
