--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -18,6 +18,7 @@ board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
+    ${esp32.ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.st7789v}
