--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -20,8 +20,7 @@ check_flags = --enable=all
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
+    ${esp32.ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
