--- a/user_setups/esp32/ttgo-esp32-lilygo-pi.ini
+++ b/user_setups/esp32/ttgo-esp32-lilygo-pi.ini
@@ -1,8 +1,8 @@
 ;***************************************************;
 ;          Lilygo®Ttgo Pi ESP32 with TFT 3.5"       ;
-;               - T-Internet-Poe ESP32-WROVER       ;
-;               - ili9481 TFT                       ;
-;               - xpt2046 touch controller          ;
+;               - Custom PCB with ESP32-WROVER      ;
+;               - IPS ili9488 LCD                   ;
+;               - GT911 touch controller            ;
 ;***************************************************;
 
 [env:ttgo-esp32-lilygo-pi]
@@ -21,28 +21,43 @@ board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
-
+    ${esp32.ps_ram}
+    
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.lolin24}
-    -D TFT_MISO=2
-    -D TFT_MOSI=15
-    -D TFT_SCLK=14
-    -D TFT_DC=4
-    -D TFT_CS=33 
-    -D TFT_RST=12  ; RST
-    -D TFT_BCKL=16 ; None, configurable via web UI (e.g. 21)
-    -D TOUCH_CS=32 ; (can also be 22 or 16)
+    -D ILI9481_DRIVER=1
+    -D SPI_FREQUENCY=27000000
+    -D TFT_WIDTH=320
+    -D TFT_HEIGHT=480
+    ;-D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
+    -D USER_SETUP_LOADED=1
+    ;-D SUPPORT_TRANSACTIONS   ; Default on ESP32
+    -D I2C_TOUCH_FREQUENCY=400000
+    -D TFT_MISO=23
+    -D TFT_MOSI=19
+    -D TFT_SCLK=18
+    -D TFT_DC=27
+    -D TFT_CS=5 
+    -D TFT_RST=-1  ; RST
+    -D TFT_BCKL=12 ; None, configurable via web UI (e.g. 21)
+    -D TOUCH_DRIVER=911 ; GT911 Capacitive I2C touch panel driver
+    -D TOUCH_IRQ=39
+    -D TOUCH_RST=-1
+    -D TOUCH_SDA=21
+    -D TOUCH_SCL=22
 ;endregion
 
 ;region -- Hasp build options ----------------------------
-    -D HASP_USE_ETHERNET=1
-    -D HASP_USE_WIFI=0
+    -D HASP_USE_WIFI=1
 ;endregion
 
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    adafruit/Adafruit GFX Library @ ^1.10.3
+    adafruit/Adafruit BusIO @ ^1.6.0
+    ; GT911 touch screen driver
+    git+https://github.com/netwizeBE/arduino-goodix.git
 
 lib_ignore =
     ${env.lib_ignore}
