--- a/platformio.ini
+++ b/platformio.ini
@@ -123,6 +123,10 @@ lib_ignore =
 lib_deps =
     LittleFS_esp32
 
+ps_ram =
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
+
 extra_scripts =
     tools/copy_partitions.py
 
