Filter lv_font_montserrat

--- a/platformio.ini
+++ b/platformio.ini
@@ -85,7 +85,7 @@ lib_deps =
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
 
-src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/>
+src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<lv_font_montserrat_*.c>
 
 extra_scripts = tools/copy_fw.py    ; tools/pre:extra_script.py
 
