Overall log level and log macros

--- a/platformio.ini
+++ b/platformio.ini
@@ -57,10 +57,12 @@ build_flags =
     
     ; -- StreamUtils build options ----------------------------
     -D STREAMUTILS_ENABLE_EEPROM=1  ; for STM32, it also supports EEPROM
-    ;-D DISABLE_LOGGING
+
+    ; -- Hasp build options ----------------------------
     -D HASP_VER_MAJ=0
     -D HASP_VER_MIN=3
     -D HASP_VER_REV=3
+    -D HASP_LOG_LEVEL=9
     -D HASP_USE_CONFIG=1            ; Native application, not library
     ${override.build_flags}
 
