--- a/platformio.ini
+++ b/platformio.ini
@@ -130,7 +130,10 @@ ps_ram =
     -mfix-esp32-psram-cache-issue
 
 extra_scripts =
+    ${env.extra_scripts}
     tools/copy_partitions.py
+    tools/analyze_elf.py
+
 
 ; -- The ESP32 has 2 SPI Hardware Busses available to use:
 vspi =
