--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,6 @@ extra_default_envs =
 ;          Common environment settings
 ;***************************************************
 [env]
-framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
 
@@ -49,21 +48,20 @@ build_flags =
     -D LV_CONF_INCLUDE_SIMPLE       ; for lvgl
     -D LV_LVGL_H_INCLUDE_SIMPLE     ; for lv_drivers
     -D LV_COMP_CONF_INCLUDE_SIMPLE  ; for components
-    ; -- littlevgl build options ------------------------------
+    ; -- ESP build options ------------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
-    -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
+    ;-D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
     
     ; -- StreamUtils build options ----------------------------
     -D STREAMUTILS_ENABLE_EEPROM=1  ; for STM32, it also supports EEPROM
 
     ; -- Hasp build options ----------------------------
     -D HASP_VER_MAJ=0
-    -D HASP_VER_MIN=3
-    -D HASP_VER_REV=3
+    -D HASP_VER_MIN=4
+    -D HASP_VER_REV=0
     -D HASP_LOG_LEVEL=9
-    -D HASP_USE_CONFIG=1            ; Native application, not library
     ${override.build_flags}
 
 ; -- Shared library dependencies in all environments
@@ -93,6 +91,7 @@ extra_scripts = tools/copy_fw.py    ; tools/pre:extra_script.py
 
 ; -- Platform specific build flags
 [esp32]
+framework = arduino
 build_flags =
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
@@ -108,6 +107,7 @@ build_flags =
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
     ;-D HASP_USE_EEPROM=1
+    -D HASP_USE_CONFIG=1            ; Native application, not library
 ; -- LittleFS build options ------------------------
 	-D CONFIG_LITTLEFS_FOR_IDF_3_2
 
@@ -146,6 +146,7 @@ hspi =
     -D TFT_SCLK=14
 
 [esp8266]
+framework = arduino
 build_flags=
     -D HTTP_UPLOAD_BUFLEN=512       ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
@@ -163,6 +164,7 @@ build_flags=
     -D HASP_USE_LITTLEFS=1
     -D HASP_USE_EEPROM=1
     -D HASP_USE_ETHERNET=0
+    -D HASP_USE_CONFIG=1            ; Native application, not library
 
 lib_ignore =
     ESP32 BLE Arduino
@@ -174,6 +176,7 @@ lib_ignore =
 lib_deps =
 
 [stm32f4]
+framework = arduino
 build_flags=
     -I include/stm32f4
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
@@ -187,6 +190,7 @@ build_flags=
     -D HASP_USE_SYSLOG=0            ; Needs UDP
     -D HASP_USE_SPIFFS=0
     -D HASP_USE_LITTLEFS=0
+    -D HASP_USE_CONFIG=1            ; Native application, not library
 
 lib_deps =
     ; sstaub/Ticker @ ^3.2.0
@@ -219,3 +223,122 @@ lib_deps =
 ;  ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/master.zip
 ;  lv_drivers@^6.0.2
 ;src_filter = +<*> +<../drivers/sdl2>
+
+[env:emulator_64bits]
+platform = native@^1.1.3
+extra_scripts = tools/sdl2_build_extra.py
+build_flags =
+  ${env.build_flags}
+  ; ----- Monitor
+  -D TFT_WIDTH=800
+  -D TFT_HEIGHT=480
+  ; SDL drivers options
+  ;-D LV_LVGL_H_INCLUDE_SIMPLE
+  ;-D LV_DRV_NO_CONF
+  -D USE_MONITOR
+  -D MONITOR_ZOOM=1 ; 2
+  -D USE_MOUSE
+  -D USE_MOUSEWHEEL
+  -D USE_KEYBOARD
+  ; ----- ArduinoJson
+  -D ARDUINOJSON_DECODE_UNICODE=1
+  -D HASP_NUM_PAGES=4
+  -D HASP_USE_SPIFFS=0
+  -D HASP_USE_LITTLEFS=0
+  -D HASP_USE_EEPROM=0
+  -D HASP_USE_GPIO=0
+  -D HASP_USE_CONFIG=0            ; Standalone application, as library
+  -D HASP_USE_DEBUG=1
+  -D HASP_USE_MQTT=1
+  -D MQTT_MAX_PACKET_SIZE=2048
+  ;-D LV_LOG_LEVEL=LV_LOG_LEVEL_INFO
+  ;-D LV_LOG_PRINTF=1
+  ; Add recursive dirs for hal headers search
+  !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
+  -mconsole
+  -lSDL2
+  -D PAHO_MQTT_STATIC
+  -D _WIN64
+  -D WINDOWS ; We add this for code branching in hasp
+  -D WIN32_LEAN_AND_MEAN
+  -DPAHO_WITH_SSL=FALSE
+  -DPAHO_BUILD_DOCUMENTATION=FALSE
+  -DPAHO_BUILD_SAMPLES=FALSE
+  -DCMAKE_BUILD_TYPE=Release
+  -DCMAKE_VERBOSE_MAKEFILE=TRUE
+  ;-D NO_PERSISTENCE
+  -I.pio/libdeps/emulator_64bits/paho/src
+  -I.pio/libdeps/emulator_64bits/ArduinoJson/src
+  -I lib/ArduinoJson/src
+  -I lib/lv_fs_if
+  -l"ws2_32"
+  -lrpcrt4
+  -lcrypt32
+  -lmingw32
+  -lSDL2main
+  -lSDL2
+  -mwindows
+  -lm
+  -ldinput8
+  -ldxguid
+  -ldxerr8
+  -luser32
+  -lgdi32
+  -lwinmm
+  -limm32
+  -lole32
+  -loleaut32
+  -lshell32
+  -lversion
+  -luuid
+  -lsetupapi
+  -lhid
+  ;-v
+
+
+lib_deps =
+  ${env.lib_deps}
+  lv_drivers@~7.9.0
+  ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/7d71907c1d6b02797d066f50984b866e080ebeed.zip
+  https://github.com/eclipse/paho.mqtt.c.git
+  bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
+
+lib_ignore = paho
+
+src_filter =
+  +<*>
+  -<*.h>
+  +<../hal/sdl2>
+  +<../.pio/libdeps/emulator_64bits/paho/src/*.c>
+  -<../.pio/libdeps/emulator_64bits/paho/src/MQTTClient.c>
+  -<../.pio/libdeps/emulator_64bits/paho/src/MQTTVersion.c>
+  -<../.pio/libdeps/emulator_64bits/paho/src/SSLSocket.c>
+  -<MQTTClient.c>
+  -<MQTTVersion.c>
+  -<SSLSocket.c>
+  -<../.pio/libdeps/emulator_64bits/lv_fs_if/lv_fs_pc.c>
+  -<../.pio/libdeps/emulator_64bits/ArduinoLog/ArduinoLog.cpp>
+  -<sys>
+  -<hal>
+  -<drv>
+  -<drv/touch>
+  -<drv/tft>
+  -<dev>
+  -<hal>
+  -<svc>
+  -<hasp_filesystem.cpp>
+  -<hasp_gui.cpp>
+  -<hasp_gui.h>
+  +<font>
+  +<hasp>
+  +<lang>
+  -<log>
+  +<mqtt>
+  -<lib/ArduinoLog>
+  -<lib/lv_fs_if>
+  -<../lib/lv_fs_if>
+  -<../lib/lv_fs_if/lv_fs_if.cpp>
+  -<../lib/lv_fs_if/lv_fs_if.h>
+  -<../lib/lv_fs_if/lv_fs_spiffs.cpp>
+  -<../lib/lv_fs_if/lv_fs_spiffs.h>
+  +<../.pio/libdeps/emulator_64bits/ArduinoJson/src/ArduinoJson.h>
