--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -9,6 +9,7 @@ extra_configs =
     ; user_setups/esp32/*.ini
     ; user_setups/esp8266/*.ini
     ; user_setups/stm32f4xx/*.ini
+    ; user_setups/win32/*.ini
     
 [override]
 ; -- Hasp config options --------------------------------------
