Tweak Windows environment

--- a/user_setups/win32/emulator_64bits.ini
+++ b/user_setups/win32/emulator_64bits.ini
@@ -4,11 +4,12 @@ extra_scripts = tools/sdl2_build_extra.py
 build_flags =
   ${env.build_flags}
   ; ----- Monitor
-  -D TFT_WIDTH=800
-  -D TFT_HEIGHT=480
+  -D TFT_WIDTH=240
+  -D TFT_HEIGHT=320
   ; SDL drivers options
   ;-D LV_LVGL_H_INCLUDE_SIMPLE
   ;-D LV_DRV_NO_CONF
+  -D LV_MEM_SIZE=262144U           ; 256kB lvgl memory
   -D USE_MONITOR
   -D MONITOR_ZOOM=1 ; 2
   -D USE_MOUSE
@@ -16,7 +17,7 @@ build_flags =
   -D USE_KEYBOARD
   ; ----- ArduinoJson
   -D ARDUINOJSON_DECODE_UNICODE=1
-  -D HASP_NUM_PAGES=4
+  -D HASP_NUM_PAGES=12
   -D HASP_USE_SPIFFS=0
   -D HASP_USE_LITTLEFS=0
   -D HASP_USE_EEPROM=0
@@ -28,14 +29,11 @@ build_flags =
   ;-D LV_LOG_LEVEL=LV_LOG_LEVEL_INFO
   ;-D LV_LOG_PRINTF=1
   ; Add recursive dirs for hal headers search
-  !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
-  -mconsole
-  -lSDL2
-  -D PAHO_MQTT_STATIC
   -D _WIN64
-  -D WINDOWS ; We add this for code branching in hasp
-  -D WIN32_LEAN_AND_MEAN
-  -DPAHO_WITH_SSL=FALSE
+  -D WINDOWS              ; We add this ourselves for code branching in hasp
+  -D WIN32_LEAN_AND_MEAN  ; exclude a bunch of Windows header files from windows.h
+  -D PAHO_MQTT_STATIC
+  -DPAHO_WITH_SSL=TRUE
   -DPAHO_BUILD_DOCUMENTATION=FALSE
   -DPAHO_BUILD_SAMPLES=FALSE
   -DCMAKE_BUILD_TYPE=Release
@@ -45,8 +43,10 @@ build_flags =
   -I.pio/libdeps/emulator_64bits/ArduinoJson/src
   -I lib/ArduinoJson/src
   -I lib/lv_fs_if
+  !python -c "import os; print(' '.join(['-I {}'.format(i[0].replace('\x5C','/')) for i in os.walk('hal/sdl2')]))"
+  -mconsole
   ; ----- Statically linked libraries --------------------
-  -l"ws2_32"
+  -l"ws2_32"  ;windsock2
   -lrpcrt4
   -lcrypt32
   -lmingw32
@@ -109,7 +109,7 @@ src_filter =
   +<mqtt/>
   -<lib/ArduinoLog>
   -<lib/lv_fs_if>
-  -<../lib/lv_fs_if>
+  -<../lib/lv_fs_if/>
   -<../lib/lv_fs_if/lv_fs_if.cpp>
   -<../lib/lv_fs_if/lv_fs_if.h>
   -<../lib/lv_fs_if/lv_fs_spiffs.cpp>
