--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,14 @@
 .pio
 data/*
 src/user_setups/active/*
+include/user_config_override.h
 src/user_config_override.h
+user_config_override.h
 platformio_override.ini
 user_setups/active/*
 build_output/*
 build_output/firmware/*.bin
+build_output/firmware/*.exe
 
 ## Test result files
 *.xml
