Cahnges to arduino environment

--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -8,14 +8,7 @@
 ; !! This board already defines TFT_CS, TFT_DC and TFT_RST !!
 
 [env:lolind32pro-lolintft24]
-platform = espressif32
-board = lolin_d32_pro
-;upload_port = COM6      ; To change the port, use platform_override.ini
-;monitor_port = COM6     ; To change the port, use platform_override.ini
-monitor_filters = esp32_exception_decoder
-board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
-check_tool = cppcheck
-check_flags = --enable=all
+extends = esp32
 
 build_flags =
     ${env.build_flags}
@@ -25,6 +18,7 @@ build_flags =
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${esp32.vspi}        ; Use VSPI hardware SPI bus
+    -D USE_TFT_ESPI
     ; The board already defines the macros for the TFT connector:
     ;-D TFT_DC=27   ; Defined by board, don't redefine !!
     ;-D TFT_CS=14   ; Defined by board, don't redefine !!
