--- a/platformio.ini
+++ b/platformio.ini
@@ -74,8 +74,8 @@ lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/fvanroie/lv_components.git
-    git+https://github.com/lvgl/lvgl.git
-    ;lvgl/lvgl @ ^7.7.2                 ; from PIO library
+    ;git+https://github.com/lvgl/lvgl.git
+    lvgl/lvgl @^7.10.1              ; from PIO library
     ;bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
     git+https://github.com/Bodmer/TFT_eSPI.git
     ; ------ Unused / Test libraries
@@ -92,6 +92,15 @@ extra_scripts = tools/copy_fw.py    ; tools/pre:extra_script.py
 ; -- Platform specific build flags
 [esp32]
 framework = arduino
+platform = espressif32
+board = lolin_d32_pro
+;upload_port = COM6      ; To change the port, use platform_override.ini
+;monitor_port = COM6     ; To change the port, use platform_override.ini
+monitor_filters = esp32_exception_decoder
+board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+check_tool = cppcheck
+check_flags = --enable=all
+
 build_flags =
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
